Camino only - Bug 383867: Remove bookmark bar from tab chain when hidden. Patch by Sean Murphy <murph@seanmurph.com>. r=smorgan sr=pink